--- a/client/layout.html
+++ b/client/layout.html
@@ -6,15 +6,9 @@
 		<div class="row">
 
 			<!-- SIDEBAR -->
-			<div class="col-sm-6 col-lg-3">
-				<h3>Sidebar </h3>
-				<ul class="list-group">
-					<li class="list-group-item"><a href="#">Item</a></li>
-					<li class="list-group-item"><a href="#">Item</a></li>
-					<li class="list-group-item"><a href="#">Item</a></li>
-					<li class="list-group-item"><a href="#">Item</a></li>
-					<li class="list-group-item"><a href="#">Item</a></li>
-				</ul>
+			<div class="col-sm-12 col-lg-3">
+				{{>addlist}}
+				{{>lists}}
 			</div>
 
 			<!-- CONTENT -->
